--- a/lecture_code/DJANGO_BLOG/articles/templates/articles/detail.html
+++ b/lecture_code/DJANGO_BLOG/articles/templates/articles/detail.html
@@ -1,4 +1,5 @@
 {% extends 'articles/base.html'%}
+{% load static %}
 
 {% block title %}DETAIL{% endblock %}
 {% block body %}
@@ -7,6 +8,11 @@
 <hr>
 <p>글 제목: {{article.title}}</p>
 <p>글 내용: {{article.content}}</p>
+{% if article.image %}
+<p>이미지: <img src="{{ article.image.url }}" alt="{{article.image}}"></p>
+{% else %}
+<p>이미지: <img src="{%static 'articles/images/no_image.jpg'%" alt="no_image"></p>
+{% endif %}
 <p>작성시간: {{article.created_at }}</p>
 <p>수정시간: {{article.updated_at }}</p>
 <hr>
